#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([yaptest], [trunk], [pentestmonkey@pentestmonkey.net])
AC_CONFIG_SRCDIR([modules/yaptest/lib/yaptest.pm.in])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile yaptest-install.sh yaptest.conf modules/yaptest/lib/yaptest.pm], [chmod a+x yaptest-install.sh])
